--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="element">
-                <img src="./images/karachaevsk.jpg" class="element__photo" alt="Карачаевск>
+                <img src="./images/karachaevsk.jpg" class="element__photo" alt="Карачаевск">
                 <div class="element__info">
                     <h2 class="element__title">Карачаево-Черкессия</h2>
                     <button class="element__like" type="button"></button>
