--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section class="profile">
             <img src="./images/jean.jpg" class="profile__avatar" alt="аватарка">
             <div class="profile__info">
-                <div class="profile_first-line">
+                <div class="profile__first-line">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <button type="button" class="profile__edit-button"></button>
                 </div>
