--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <button class="element__like" type="button" aria-label="нравится"></button>
                 </div>
             </li>
-            </section>
+        </ul>
 
     </main>
     <footer class="footer">
@@ -79,7 +79,7 @@
         <div class="popup__container">
             <button class="popup__close-bttn" type="button"></button>
             <h3 class="popup__form-name">Редактировать профиль</h3>
-            <form name="данные профиля">
+            <form name="profile info">
                 <label class="popup__label" for="Name">
                     <input type="text" id="Name" placeholder="Имя" class="popup__input popup__field-name"
                         name="name"></label>
