--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="popup__container">
             <button class="popup__close-bttn" type="button"></button>
             <h3 class="popup__form-name">Редактировать профиль</h3>
-            <form name="profile info">
+            <form name="profile-info">
                 <label class="popup__label" for="Name">
                     <input type="text" id="Name" placeholder="Имя" class="popup__input popup__field-name"
                         name="name"></label>
