--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     class="popup__input popup__field-about" name="about" required>
                 <span id='about-error' class="error"></span>
             </label>
-            <button class="popup__save-bttn" type="button">Сохранить</button>
+            <button class="popup__save-bttn" type="submit">Сохранить</button>
         </form>
     </div>
     <div class="popup popup_add">
@@ -62,7 +62,7 @@
                     name="photoLink" required>
                 <span id='photoLink-error' class="error"></span>
             </label>
-            <button class="popup__save-bttn" type="button">Создать</button>
+            <button class="popup__save-bttn" type="submit">Создать</button>
         </form>
     </div>
     <div class="popup popup_big-image">
@@ -84,8 +84,9 @@
             </div>
         </div>
     </template>
-    <script src="/scripts/validation.js" type="module"></script>
-    <script src="/scripts/index.js" type="module"></script>
+    <script src="/scripts/cards.js"></script>
+    <script src="/scripts/validation.js"></script>
+    <script src="/scripts/index.js"></script>
 </body>
 
 </html>
