--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
             </div>
         </div>
     </template>
-    <script src="/scripts/cards.js"></script>
-    <script src="/scripts/validation.js"></script>
-    <script src="/scripts/index.js"></script>
+    <script src="./scripts/index.js" type="module"></script>
 </body>
 
 </html>
